[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lit-muse"
version = "0.1.0"
description = "Convert book vibes into music playlists using LLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30.0",
    "litellm",
]

[project.scripts]
lit-muse-web = "lit_muse.cli:main"